Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignBoolObjBooleanField.quorum
class Main
    Boolean bool
    action Main
        bool = cast(boolean, true)
        if bool:GetValue() = true
            output "passed"
        end
    end
end