Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignIntObjBoolObjWrapped.quorum
class main
    action Main
        Boolean bool
        bool:setValue(true)
        Integer i = bool
    end
end